.archive/kubernetes/crunchy-postgres-operator/pgadmin/service.yaml
---
# trunk-ignore(checkov/CKV_K8S_21)
apiVersion: v1
kind: Service
metadata:
  name: pgadmin
spec:
  type: ClusterIP
  ports:
  - name: pgadmin-port
    port: 5050
    protocol: TCP
  selector:
    postgres-operator.crunchydata.com/pgadmin: pgadmin
