.archive/kubernetes/crunchy-postgres-operator/pgadmin/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pgadmin
spec:
  hostnames:
    - pgadmin.${SECRET_EXTERNAL_DOMAIN}
  parentRefs:
    - group: pgadmin.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - group: ''
          kind: Service
          name: pgadmin
          namespace: database
          port: 5050
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
